<resources>
    <string name="app_name">Construx</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_job_list">All Jobs</string>
    <string name="jobs">Jobs</string>
    <string name="job_name">Job Name</string>
    <string name="job_address">Job Address</string>
    <string name="date">Date</string>
    <string name="create">Create</string>
    <string name="title_activity_card_view">Job</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_job">View Job</string>
    <string name="estimate_name">Estimate name</string>
    <string name="total_price">Total Price:</string>
    <string name="_0_00">0.00</string>
    <string name="create_estimate">Create Estimate</string>
    <string name="estimate">Estimate</string>
    <string name="total">Total:</string>
    <string name="materials">Materials:</string>
    <string name="add_a_material">Add a Material:</string>
    <string name="x">X</string>
    <string name="title_activity_settings">Settings</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change">change</string>
    <string name="new_material">New Material</string>
    <string name="material_name">Material Name</string>
    <string name="measurement_type">measurement type</string>
    <string name="meas_type">Meas type</string>
    <string name="view_notes">View Notes</string>
    <string name="note_title">Note Title</string>
    <string name="add">Add</string>
</resources>
